--- a/InitialOpeningAesthetics.html
+++ b/InitialOpeningAesthetics.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Hello! How are we doing today? <br>Let's have a Glimpse</h1>
 <p></p>
-<button class="button button1">Mood Journal</button>
-<button class="button button2">See Past Entries</button>
+<div class = "center1"><button class="button button1">Mood Journal</button></div>
+<div class = "center2"><button class="button button2">See Past Entries</button></div>
 </body>
 </html>
