--- a/InitialOpeningAesthetics.html
+++ b/InitialOpeningAesthetics.html
@@ -7,7 +7,31 @@
 <body>
   <h1>Hello! How are we doing today? <br>Let's have a Glimpse</h1>
 <p></p>
+<div style="position:relative;
+width:100%;
+height:200px;
+border:0px groove;"> 
+<img src="https://www.pngmart.com/files/1/Green-Leaves-PNG-Clipart.png"
+style="position:absolute;
+width:100px;
+height:150px;
+bottom:40px;
+left:60px;">
+</div>
+<div style="position:relative;
+width:100%;
+height:0px;
+border:0px groove;"> 
+<img src="https://www.pngmart.com/files/1/Green-Leaves-PNG-Clipart.png"
+style="position:absolute;
+width:100px;
+height:150px;
+bottom:40px;
+left:530px;">
+</div>
 <div class = "center1"><button class="button button1">Mood Journal</button></div>
 <div class = "center2"><button class="button button2">See Past Entries</button></div>
 </body>
+
 </html>
+
