--- a/MoodButtonsV1.html
+++ b/MoodButtonsV1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Global Wellness - Mood Assessor</title>
-  <link href="BlueMoodButtons.css" rel="stylesheet" type="text/css">
+  <link href="MoodButtonsV1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <h1>How's your mood today?</h1> 
